<resources>
    <string name="app_name">Remind &amp; Record</string>
    <string name="action_settings">Settings</string>
    <string name="home_page">Alarms</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="text_song">Song</string>
    <string name="text_Volume">volume</string>
    <string name="text_shake">shake</string>
    <string name="button_delete">delete</string>
    <string name="button_save">save</string>
    <string name="button_cancel">cancel</string>
    <string name="button_ok">ok</string>
    <string name="alarm_name">Label</string>
    <string name="text_Gradual">声音渐强</string>
    <string name="hint_lable">label</string>
    <string name="text_snooze">snooze</string>
    <string name="text_snoozetime">5 minutes</string>
    <string name="button_commitbug">发送</string>
    <string name="string_time_left">%s ring</string>
    <string name="text_about">本程序目前为Alpha阶段，发现bug欢迎反馈，最终会实现以下功能来帮助你起床\n1.防止自己太轻松地关闭闹钟睡过头，想要关闭闹钟，可能要花大力气或者动脑筋让自己清醒\n2.自己可以调节关闭闹钟的难度和方式，如果想早起，可以调地难一些。\n3.闹钟响起的时候无法关闭手机，也不能降低音量，总之，不完成自己设定的条件是不会停的</string>
    <string name="title_activity_hello">HelloActivity</string>
    <string name="section_format">欢迎使用WakeUp闹钟叫你起床</string>
    <string name="title_about">关于</string>
    <string name="title_setting">设  置</string>
    <string name="title_add_clock">add alarm</string>
    <string name="title_feed_back">问题反馈</string>
    <string name="string_title_email">"WakeUp闹钟Bug"</string>
    <string name="version_text">0.0.4.15Alpha</string>
    <string name="title_section1">section1</string>
    <string name="title_section2">section2</string>
    <string name="title_section3">section3</string>
    <string name="title_activity_add_reminder">Add Notifications</string>
    <string name="title_activity_edit_reminder">Edit Notes</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Notification</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Notification</string>
    <string name="action_save_reminder">Save Notification</string>

    <string name="no_reminders">Click on the plus button to create your notifications!</string>

</resources>
